--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="envoyer">Envoyer</string>
     <string name="title_activity_connected">Connected</string>
     <string name="hello">Bonjour </string>
+    <string name="logout">Déconnexion</string>
 </resources>
